--- a/src/views/calendar/weekly-calendar/day/style.scss
+++ b/src/views/calendar/weekly-calendar/day/style.scss
@@ -26,6 +26,7 @@
       bottom: 0;
       left: 0;
       background-color: var(--primary-light);
+      z-index: $layer-1;
     }
   }
 
